Update Minutes - 2025-10-06.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-06.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-06.md
@@ -16,7 +16,14 @@
   - Need to include payload, weight distribution, operating procedures, and maintenance instructions for the drone and its repairs.  
   - Confirmed no new computing tools need to be ordered.  
   - Emphasized that project proposal, while a draft, must be thorough since it leads into the conceptual design.  
-  - Budget: approximately $1,000. Every purchase must be justified and necessary.  
+  - Budget: approximately $1,000. Every purchase must be justified and necessary.
+ 
+- **Discord Meeting with the Group:**
+  - Discussed the feedback we received from Dr. Storm.
+  - Reviewed the previous team's progress and the notes from the meeting with Dr. Storm.
+  - Distributed the Project Proposal's workload.
+  - Discussed the team's skills and how to compensate for the team's shortcomings.
+
 
 ## Summary / Next Steps
 - Plan to repair the Parrot Anafi Ai 4G Robotic Drone and assess costs against $1,000 budget.  
