Create Minutes - 2025-10-13.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-13.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-13.md
@@ -10,7 +10,7 @@
     - Emphasized that the **block diagram** is essential and must illustrate every subsystem, including all inputs and outputs (power, signals, serial & wireless communications, etc.)
     - The **software and user interaction** should be represented with a **flowchart**, showing autonomous/manual options and decision pathways
     - Specifications and goals should be **highly detailed** to serve as verification benchmarks for prototype success
-    - For problems with multiple possible solutions, a **comparative analysis** must be documented—outlining all options, the reasoning, and why the final choice was made
+    - For problems with multiple possible solutions, a **comparative analysis** must be documented, outlining all options, the reasoning, and why the final choice was made
     - Discussed **geo-location methods** such as acoustic, visual, and cell-phone signal tracking; documentation should include chosen methods and justifications
     - Team should **divide subsystems** based on each member’s strengths; once someone finishes their assigned task, they should assist in other ongoing areas (“flexing”)
     - Recommended to start with **complex subsystems**, assigning two members per complex area before moving outward
