Update Minutes - 2026-01-28.md

--- a/Documentation/Meeting Minutes/Minutes - 2026-01-28.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-01-28.md
@@ -3,7 +3,7 @@
 **Team Members:**  
 - Kasey Dyess, Job Flores, Wyatt Wheeler, Gideon Befekadu, Zenkline Elle, Brody Smith  
 
-## Week 13 (1) Meetings
+## Week 13 Meetings
 - **Discussion:**
     - Held the first meeting of the semester to regroup and discuss overall goals and deadlines  
     - Reviewed expectations for individual responsibility within each subsystem  
